<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/types"
        android:entries="@array/types"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ticket"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >
        <EditText
            style="@style/myEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min_between"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:id="@+id/min_between"
            />
        <EditText
            style="@style/myEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/max_between"
            android:id="@+id/max_between"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/price_free"
            android:text="@string/free"
            android:theme="@style/CheckBoxColor"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kids_ticket"
        android:layout_marginTop="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"

        >
        <EditText
            style="@style/myEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min_between"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:id="@+id/min_between_k"
            />
        <EditText
            style="@style/myEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/max_between"
            android:id="@+id/max_between_k"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/price_free_kids"
            android:text="@string/free"
            android:theme="@style/CheckBoxColor"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/date"
        android:layout_marginTop="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >
        <Button
            style="@style/ButtonStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/min_date"
            android:layout_margin="3dp"
            android:text="@string/min_date"
            />
        <Button
            style="@style/ButtonStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/max_date"
            android:layout_margin="3dp"
            android:text="@string/max_date"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/today"
            android:text="@string/today"
            android:theme="@style/CheckBoxColor"
            />
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/sort"
        android:entries="@array/sort"
        />
</LinearLayout>
</ScrollView>

</LinearLayout>