<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Profile.add.addEvent"
    android:background="@color/colorAccent">
    <FrameLayout
        style="@style/add_frame_title"
        >
        <ImageView
            style="@style/add_back_button"
            android:id="@+id/back_to_2"
            />
        <TextView
            style="@style/title"
            android:text="@string/add_info_other"
            />
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/price_kids"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/price_kids"
                    android:inputType="numberDecimal"
                    android:hint="@string/price_demo"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/price_free_kids"
                    android:layout_weight="1"
                    android:layout_marginLeft="50dp"
                    android:text="@string/free"
                    android:theme="@style/CheckBoxColor"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/date_end"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/date_picker_end"
                    android:background="@color/colorAccent"
                    android:layout_margin="3dp"
                    android:text="@string/date"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_picker_end"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:layout_margin="3dp"
                    android:text="@string/time"
                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <Button
        style="@style/continue_but"
        android:id="@+id/next_to_4"
        android:layout_marginBottom="70dp"/>
</LinearLayout>