<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.add.addEvent"
    android:background="@color/colorAccent">
    <FrameLayout
        style="@style/add_frame_title"
        >
        <ImageView
            style="@style/add_back_button"
            android:id="@+id/back_to_1"
            />
        <TextView
            style="@style/title"
            android:text="@string/add_info"
            />
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                        <EditText

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/address"
                            android:hint="@string/address"
                            android:layout_marginTop="10dp"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:layout_marginBottom="20dp"
                             android:gravity="center"
                             android:textSize="15dp"
                             android:text="@string/price"/>
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
                                 <EditText
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:id="@+id/price"
                                     android:inputType="numberDecimal"
                                     android:hint="@string/price_demo"
                                     />
                                 <CheckBox
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:id="@+id/price_free"
                                     android:layout_weight="1"
                                     android:layout_marginLeft="50dp"
                                     android:text="@string/free"
                                     android:theme="@style/CheckBoxColor"
                                     />
                         </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:text="@string/date_start"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/date_picker_st"
                    android:background="@color/colorAccent"
                    android:layout_margin="3dp"
                    android:text="@string/date"
                    />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/time_picker_st"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:layout_margin="3dp"
                        android:text="@string/time"
                        />
                </LinearLayout>
             </LinearLayout>

    </ScrollView>aa
    <Button
        style="@style/continue_but"
        android:id="@+id/next_to_3"
        android:layout_marginBottom="70dp"/>
</LinearLayout>