<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <TextView
        style="@style/headFragment"
        android:id="@+id/name_profile"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/photo_iv"/>
        <TextView
            style="@style/profile_info"
            android:id="@+id/mail"/>
        <TextView
            style="@style/profile_info"
            android:id="@+id/town"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/menu_profile"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:layout_marginBottom="45dp"
        >
        <Button
            style="@style/basicButtons"
            android:drawableRight="@drawable/ic_settings_black_24dp"
            android:id="@+id/settings"
            android:text="@string/settings"
            />
        <Button
            style="@style/basicButtons"
            android:drawableRight="@drawable/ic_favorite_black_24dp"
            android:id="@+id/fav"
            android:text="@string/favorits"
            />
        <Button
            style="@style/basicButtons"
            android:drawableRight="@drawable/ic_message_black_24dp2"
            android:text="Диалоги"
            android:id="@+id/my_msg"
            />
        <Button
            style="@style/basicButtons"
            android:drawableRight="@drawable/ic_add_to_photos_black_24dp"
            android:id="@+id/add_event"
            android:text="@string/add_meeting"
            />
        <Button
            style="@style/basicButtons"
            android:drawableRight="@drawable/ic_burst_mode_black_24dp"
            android:text="@string/my_meeting"
            android:id="@+id/my_ev"
            />
        <Button
            style="@style/basicButtons"
            android:id="@+id/exit_profile"
            android:drawableRight="@drawable/ic_exit_to_app_black_24dp"
            android:text="@string/exit"
            />
    </LinearLayout>

</LinearLayout>
</LinearLayout>